testing/errors/toolateforpostfix5.a
;ACME 0.96.5
	a+1 = 3
	b = a	; read a
	!set a+2 = 5	; -> "too late for postfix"
